src/app/app.component.scss
:host {
  user-select: none;
}

app-celestial-bg {
  overflow: hidden;
  width: 100vw;
  height: 100vh;
  position: absolute;
  left: 0;
  top: 0;
}

.ui {
  z-index: 100;
  position: relative;
  pointer-events: none;
  * {
    pointer-events: auto;
  }
}

.date {
  position: absolute;
  top: 20vh;
  width: 100%;
  text-align: center;
  color: whitesmoke;
  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
  font-size: 6.5vmin;
}

.time {
  @extend .date;
  top: calc(20vh + 20vmin);
}

@mixin translucent {
  select,button,fa-icon {
    opacity: 50%;
    &.clickable:hover {
      opacity: 75%;
    }
  }
}

.unclickable {
  pointer-events: none;
}

.menubar {
  @include translucent();
  padding: 1ch;
  padding-right: 0;
  text-align: right;
  height: 4ch;
  display: flex;
  flex-direction: row;
  overflow: hidden;
  .square {
    width: 4ch;
    text-align: center;
  }
  >* {
    margin-right: 1ch;
    height: 100%;
  }
  .separator {
    width: 0;
    margin: 0 auto;
  }
  >fa-icon {
    padding-top: 0.4em;
    width: 2ch;
    text-align: center;
  }
}

.overlay {
  background-color: rgba(100, 100, 100, 0.5);
  padding: 1ch;
  margin: 1ch;
  margin-top: -1ch;
  gap: 1ch;
  border-radius: 1vmin;
  width: fit-content;
  max-width: 100vmin;
  max-height: calc(100vh - 4ch);
  overflow-y: scroll;
  color: whitesmoke;
}

.menu {
  @extend .overlay;
  display: flex;
  flex-direction: column;
  >* {
    height: 4ch;
  }
}

.menu,.menubar {
  select,button {
    background-color: white;
    border-color: rgb(118, 118, 118);
    border-width: 0.8px;
    padding-block: 0;
    text-align-last: center;
  }
}

.direction {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  @include translucent();
  app-holdable-button {
    position: absolute;
    &.bearing {
      width: 1.5vh;
      height: 20vh;
      top: calc(50% - 10vh);
    }
    &.elevation {
      height: 1.5vh;
      width: 20vh;
      left: calc(50% - 10vh);
    }
    &[arrow=left] {
      left: 1.5ch;
    }
    &[arrow=right] {
      right: 1.5ch;
    }
    &[arrow=up] {
      top: 1.5ch;
    }
    &[arrow=down] {
      bottom: 1.5ch;
    }
  }
}

.footer {
  position: absolute;
  bottom: 0;
  margin: 0 5px;
  text-align: left;
  a {
    color: inherit;
    text-decoration: none;
  }
}

.drag-sphere {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  touch-action: none;
}

